세션 로그인 Security

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	// 타임리프에서 시큐리티 문법을 쓰기 위한 라이브러리
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	// redis사용을 위한 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	// 세션스토리지를 redis에 저장하기 위한 의존성 추가
+	implementation 'org.springframework.session:spring-session-data-redis'
 }
 
 tasks.named('test') {
